# AgentAudit

./: .gitignore  PROJECT_1_AgentAudit.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_PLAN.md
examples/: README.md  anchoring_demo.py  benchmark.py  kyc_demo.py  langchain_kyc_demo.py  live_kyc_stream.py  production_hardening_demo.py  selective_disclosure_demo.py
src/agentaudit/: __init__.py  bundle.py  cli.py  controls.py  keys.py  log.py  redaction.py  schema.py  storage.py  verifier.py
src/agentaudit/anchoring/: __init__.py  base.py  rekor.py  witness.py
src/agentaudit/crypto/: __init__.py  canonical.py  merkle.py  signing.py
src/agentaudit/dashboard/: __init__.py  data.py  page.py  server.py
src/agentaudit/integrations/: __init__.py  crewai.py  langchain.py  otel.py
tests/: test_anchoring.py  test_canonical.py  test_chain.py  test_dashboard.py  test_demo_and_controls.py  test_engine_perf.py  test_hardening.py  test_integrations.py  test_merkle.py  test_redaction.py  test_signing.py  test_tamper.py
tests/fixtures/: rekor_entry.json
