[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentaudit"
version = "0.1.0"
description = "Tamper-evident, cryptographically verifiable audit trails for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "AgentAudit contributors" }]
keywords = [
    "ai-agents", "audit", "governance", "eu-ai-act", "merkle-tree",
    "tamper-evident", "compliance", "observability", "transparency-log",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]
# Framework integrations (D1) and anchoring are optional -- install what you use.
otel = ["opentelemetry-sdk>=1.27"]
langchain = ["langchain-core>=0.3"]
crewai = ["crewai>=0.40"]
rekor = ["certifi>=2024.0"]        # public transparency-log anchoring (TLS CA bundle)
all = [
    "opentelemetry-sdk>=1.27", "langchain-core>=0.3", "crewai>=0.40", "certifi>=2024.0",
]

[project.scripts]
agentaudit = "agentaudit.cli:main"

[project.urls]
Homepage = "https://github.com/agentaudit/agentaudit"
Documentation = "https://github.com/agentaudit/agentaudit#readme"
Issues = "https://github.com/agentaudit/agentaudit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentaudit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
